# Streetlifting-RefereeAI

./: .gitignore  GEMINI.md  PromptInizialeSquat.txt  README.md  SPEC.md  pyproject.toml  requirements.txt
Dip/: .gitignore  GEMINI.md
Dip/configs/: default.yaml
Dip/docs/: TASKS.md
Dip/output/dip_1/: report.json
Dip/output/dip_3/: report.json
Dip/src/dip_validator/: cli.py  phases.py  reporting.py  video_io.py
Dip/tests/: test_phases.py  test_refinement.py
Squat/: .gitignore  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml  requirements.txt
Squat/.claude/: settings.local.json
Squat/Docs/: ARCHITECTURE.md  Architecture.md  DECISIONS.md  PRD.md  Rules.md  TechStack.md
Squat/src/: depth_analyzer.py  pose_estimator.py  renderer.py  rep_detector.py  utils.py
Squat/tests/: test_depth_analyzer.py  test_rep_detector.py
docs/: DECISIONS.md  SPEC.md
output/dip_2/: report.json
src/dip_validator/: __main__.py  cli.py  pose.py  refinement.py  rules.py
tests/: test_config.py  test_refinement.py  test_reporting.py  test_rules.py
